# eml-torch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  VACUITY_AUDIT_TOOL.md  pyproject.toml
docs/: method.md
emltorch/: __init__.py  _ast.py  api.py  evolution.py  gated_attn.py  gradient.py  hybrid.py  hybrid_mul.py  operator.py  polish.py  sklearn.py  smt.py  symbolic.py  trainer.py  tree.py
emltorch/certify/: __init__.py  atlas.py  cli.py  concentration.py  extract.py  solvers.py  vacuity_audit.py  vacuity_cli.py
emltorch/interp/: __init__.py
examples/: recover_elementary.py  refusal_circuit.py
examples/h31_blackbox_cert/: PREREG.md  README.md  _h31_common.py  h31_anti_tautology_guards.py  h31_blackbox_runner.py  h31_emit_certs.py  h31_figure.py  h31_fit_and_baseline.py  h31_h_only_refit.py  h31_probe_generator.py  h31_random_target_runner.py
examples/h31_blackbox_cert/outputs/: anti_tautology_results.json  cert_verdicts.json  fit_results.json  h_only_refit_results.json  measurements_qwen36.jsonl  measurements_qwen36_factual_RANDOMTARGET.jsonl  probes.jsonl
examples/h31_blackbox_cert/outputs/certs/: qwen36_factual_failure_ub.smt2  qwen36_factual_working_lb.smt2
examples/srbench_feynman/: make_eml_wins_figure.py  make_figures.py  pysr_multithreading_retime.json  results.json  run.py
lean/: README.md  lakefile.lean
lean/EmlAxioms/: Basic.lean
scripts/: const_reg_ablation.py  escalation_ablation.py  harder_targets.py  range_penalty_ablation.py  sin_push.py  verify_polish_fix.py
tests/: test_attention_lipschitz.py  test_auto_certifier.py  test_capability_extensions.py  test_certify_atlas_gpt2.py  test_certify_atlas_sweep.py  test_certify_cli.py  test_certify_concentration.py  test_certify_hardening.py  test_certify_solvers.py  test_combos.py  test_depth5.py  test_fit.py  test_fit_api_inputs.py  test_fit_multi_seed.py  test_fit_residual_boost.py  test_gated_effective_weights.py  test_island_model.py  test_make_figures_smoke.py  test_numerical_stability.py  test_pareto.py  test_polish_lbfgs.py  test_raw_weight_cert.py  test_sklearn.py  test_smt_cert_emit.py  test_vacuity_audit.py  test_vacuity_cli.py
