[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emltorch"
version = "0.2.0"
description = "GPU-batched symbolic regression via the EML operator (exp(x) - ln(y))"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Samuel Hong", email = "dev@newmes.io" }]
keywords = [
    "symbolic-regression",
    "interpretability",
    "mechanistic-interpretability",
    "eml",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.24",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
    "mkdocs-material",
]
interp = [
    "transformers>=4.40",
    "safetensors>=0.4",
]

[project.urls]
Homepage = "https://github.com/samuelhong-newmes/emltorch"
Repository = "https://github.com/samuelhong-newmes/emltorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["emltorch*"]

[tool.ruff]
line-length = 100
target-version = "py310"
