[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emltorch"
version = "0.6.0"
description = "GPU-batched symbolic regression via the EML operator (exp(x) - ln(y))"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Samuel Hong", email = "dev@newmes.io" }]
keywords = [
    "symbolic-regression",
    "smt",
    "smt-lib",
    "formal-verification",
    "z3",
    "cvc5",
    "mechanistic-interpretability",
    "interpretability",
    "transformer",
    "pytorch",
    "eml",
    "evolutionary-algorithm",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.24",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
]
smt = [
    "z3-solver",
    "cvc5",
]
h31 = [
    "transformers>=4.40",
    "z3-solver",
    "cvc5",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/AI-Safeter/eml-torch"
Repository = "https://github.com/AI-Safeter/eml-torch"

[tool.setuptools.packages.find]
where = ["."]
include = ["emltorch*"]

[tool.ruff]
line-length = 100
target-version = "py310"
